--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Delve Detroit Fact Randomizer",
   "main": "index.js",
   "dependencies": {
+    "ejs": "^2.3.4",
     "express": "^4.13.3"
   },
   "devDependencies": {},
